--- a/templates/index.html
+++ b/templates/index.html
@@ -64,11 +64,11 @@
 <body>
 
   <nav>
-    <a href="/index.html">Главная</a>
-    <a href="/speakers.html">Спикеры</a>
-    <a href="/partners.html">Партнёры</a>
-    <a href="/faq.html">FAQ</a>
-    <a href="/contacts.html">Контакты</a>
+    <a href="index.html">Главная</a>
+    <a href="speakers.html">Спикеры</a>
+    <a href="partners.html">Партнёры</a>
+    <a href="faq.html">FAQ</a>
+    <a href="contacts.html">Контакты</a>
   </nav>
 
   <section class="hero">
