--- a/templates/index.html
+++ b/templates/index.html
@@ -64,11 +64,11 @@
 <body>
 
   <nav>
-    <a href="/index.html">Главная</a>
-    <a href="/speakers.html">Спикеры</a>
-    <a href="/partners.html">Партнёры</a>
-    <a href="/faq.html">FAQ</a>
-    <a href="/contacts.html">Контакты</a>
+    <a href="{{ url_for('index') }}">Главная</a>
+    <a href="{{ url_for('speakers') }}">Спикеры</a>
+    <a href="{{ url_for('partners') }}">Партнёры</a>
+    <a href="{{ url_for('faq') }}">FAQ</a> <!-- ← добавлена кнопка -->
+    <a href="{{ url_for('contacts') }}">Контакты</a>
   </nav>
 
   <section class="hero">
