--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -93,9 +93,9 @@
 
   <h1>Часто задаваемые вопросы (FAQ)</h1>
 
-  <div class="question"><h3>• Могу ли я стать спикером?</h3><p>Да!  Если у вас есть сильный кейс, профессиональный опыт в маркетинге, пиаре, блоггинге, бизнесе, стартапе в Европе или диджитал-сфере — напишите нам на <strong>ctcsummit.event@gmail.com</strong> с темой письма: «спикер».</p></div>
+  <div class="question"><h3>• Могу ли я стать спикером?</h3><p>Да! Если у вас есть сильный кейс, профессиональный опыт в маркетинге, пиаре, блоггинге, бизнесе, стартапе в Европе или диджитал-сфере — напишите нам на <strong>ctcsummit.event@gmail.com</strong> с темой письма: «спикер».</p></div>
 
-  <div class="question"><h3>• Могу ли я стать партнёром или спонсором?</h3><p>Конечно. У нас есть гибкие пакеты партнёрства и широкие возможности для вашего бренда — от упоминаний на сцене до экспозоны и интеграций в соцсетях. пишите нам на <strong>ctcsummit.event@gmail.com</strong> с темой: «партнёр» или «спонсор».</p></div>
+  <div class="question"><h3>• Могу ли я стать партнёром или спонсором?</h3><p>Конечно. У нас есть гибкие пакеты партнёрства и широкие возможности для вашего бренда — упоминания на сцене, экспозоны и интеграциz в соцсетях. И что самое важное — коллаборации с партнерами и участниками саммита. А это сотни упоминаний вашего бренда и вас. Пишите нам на <strong>ctcsummit.event@gmail.com</strong> с темой: «партнёр» или «спонсор».</p></div>
 
   <div class="question"><h3>• Могу ли я участвовать, если не живу в Германии? Франции? Швейцарии?</h3><p>Да! Саммит международный, участвовать можно из любой страны. Главное — быть вовлечённым в тематику и хотеть развиваться.</p></div>
 
