--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -90,6 +90,7 @@
     <a href="/">Главная</a>
     <a href="/speakers">Спикеры</a>
     <a href="/partners">Партнёры</a>
+    <a href="/faq">FAQ</a>
     <a href="/contacts">Контакты</a>
   </nav>
 
