--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -38,9 +38,10 @@
 </head>
 <body>
     <nav>
-        <a href="/">Главная</a> |
-        <a href="/speakers">Спикеры</a> |
-        <a href="/partners">Партнёры</a> |
+        <a href="/">Главная</a> 
+        <a href="/speakers">Спикеры</a> 
+        <a href="/partners">Партнёры</a> 
+        <a href="/faq">FAQ</a>
         <a href="/contacts">Контакты</a>
     </nav>
     <hr>
