--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -51,6 +51,7 @@
         <a href="/">Главная</a>
         <a href="/speakers">Спикеры</a>
         <a href="/partners">Партнёры</a>
+        <a href="/faq">FAQ</a>
         <a href="/contacts">Контакты</a>
     </nav>
 
