--- a/templates/partners.html
+++ b/templates/partners.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <nav>
+    <a href="/">Главная</a> |
+    <a href="/speakers">Спикеры</a> |
+    <a href="/partners">Партнёры</a> |
+    <a href="/contacts">Контакты</a> |
+    <a href="/faq">FAQ</a>
+</nav>
+<hr>
+
   <meta charset="UTF-8">
   <title>Наши партнёры</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
