--- a/templates/partners.html
+++ b/templates/partners.html
@@ -147,10 +147,10 @@
     <hr style="margin-top: 40px; border-color: #444;">
 <head>
   <nav>
-    <a href="/">Главная</a> |
-    <a href="/speakers">Спикеры</a> |
-    <a href="/partners">Партнёры</a> |
-    <a href="/contacts">Контакты</a> |
+    <a href="/">Главная</a> 
+    <a href="/speakers">Спикеры</a> 
+    <a href="/partners">Партнёры</a> 
+    <a href="/contacts">Контакты</a>
     <a href="/faq">FAQ</a>
 </nav>
 <hr>
